--- a/packages/fzf/dot-local/env/fzf.conf
+++ b/packages/fzf/dot-local/env/fzf.conf
@@ -1,6 +1,9 @@
 FZF_DEFAULT_COMMAND="fd --hidden --strip-cwd-prefix --exclude .git"
 FZF_DEFAULT_OPTS_FILE="$HOME/.config/fzf/config"
 
+# CTRL-Y to copy the command into clipboard using pbcopy
+FZF_CTRL_R_OPTS=" --preview 'echo {2..} | bat --color=always -pl sh' --preview-window up:hidden:wrap --bind 'ctrl-/:change-preview-window(30%|60%|90%|)' --bind 'ctrl-v:execute(echo {2..} | view - > /dev/tty)' --bind 'ctrl-t:track+clear-query' --bind 'ctrl-y:execute-silent(echo -n {2..} | pbcopy)+abort' --color header:italic --header 'C-y copy command to clipboard'"
+
 FZF_CTRL_T_OPTS="--preview 'bat -n --color=always --line-range :500 {}'"
 
 FZF_ALT_C_COMMAND="" # use zoxide
