--- a/packages/tmux/dot-config/tmux/tmux.conf
+++ b/packages/tmux/dot-config/tmux/tmux.conf
@@ -2,7 +2,7 @@
 # Set term colors
 set-option -g default-terminal "$TERM"
 # suggested by README in https://github.com/folke/lsp-colors.nvim
-set-option -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set-option -as terminal-overrides ',*:Smulx=\E[4::%p1%dm' # undercurl support
 # set-option -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 # set-option -a default-terminal "tmux-256color"
 # set-option -ag terminal-overrides ",xterm-256color:RGB"
@@ -99,17 +99,17 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH '$HOME/.local/share/tmux/plugins'
 # See: https://github.com/christoomey/vim-tmux-navigator
 vim_pattern='(\S+/)?g?\.?(view|l?n?vim?x?|fzf)(diff)?(-wrapped)?'
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +${vim_pattern}$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-bind-key -n 'C-;' if-shell "$is_vim" 'send-keys C-;'  'select-pane -l'
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+# bind-key -n 'C-;' if-shell "$is_vim" 'send-keys C-;' 'select-pane -l'
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\\' select-pane -l
+bind-key -T copy-mode-vi 'C-;' select-pane -l
 ########################################################
 
 ######################## PANES #########################
@@ -120,17 +120,17 @@ set-option -g base-index 1
 bind-key m resize-pane -Z
 
 # switch pane without prefix (without wrapping)
-bind-key -n C-h if -F '#{pane_at_left}'   '' 'select-pane -L'
+bind-key -n C-h if -F '#{pane_at_left}' '' 'select-pane -L'
 bind-key -n C-j if -F '#{pane_at_bottom}' '' 'select-pane -D'
-bind-key -n C-k if -F '#{pane_at_top}'    '' 'select-pane -U'
-bind-key -n C-l if -F '#{pane_at_right}'  '' 'select-pane -R'
+bind-key -n C-k if -F '#{pane_at_top}' '' 'select-pane -U'
+bind-key -n C-l if -F '#{pane_at_right}' '' 'select-pane -R'
 
 # <prefix>-hjkl: Default pane switching
 # useful if C-hjkl is being consumed by something else
-bind-key h if -F '#{pane_at_left}' '' 'select-pane -L'
+bind-key h if -F '#{pane_at_left}'   '' 'select-pane -L'
 bind-key j if -F '#{pane_at_bottom}' '' 'select-pane -D'
-bind-key k if -F '#{pane_at_top}' '' 'select-pane -U'
-bind-key l if -F '#{pane_at_right}' '' 'select-pane -R'
+bind-key k if -F '#{pane_at_top}'    '' 'select-pane -U'
+bind-key l if -F '#{pane_at_right}'  '' 'select-pane -R'
 
 # Pane swapping
 # bind-key H swap-pane -L # not supported...
