--- a/packages/git/dot-config/git/config
+++ b/packages/git/dot-config/git/config
@@ -4,13 +4,47 @@
 	path = difftool
 
 [advice]
-	# statusHints = false
-	addEmptyPathSpec = false
+	addEmbeddedRepo
+	addEmptyPathspec = false
+	addIgnoredFile = false
+	amWorkDir = false
+	ambiguousFetchRefspec = false
+	checkoutAmbiguousRemoteBranchName = false
+	commitBeforeMerge = false
 	detachedHead = false
+	diverging = false
+	fetchShowForcedUpdates = false
 	forceDeleteBranch = false
+	ignoredHook = false
+	implicitIdentity = false
 	mergeConflict = false
-	pushNonFastForward = false
+	nestedTag = false
+	pushAlreadyExists = false
+	pushFetchFirst = false
+	pushNeedsForce = false
+	pushNonFFCurrent = false
+	pushNonFFMatching = false
+	pushRefNeedsUpdate = false
+	pushUnqualifiedRefname = false
+	pushUpdateRejected = false
+	rebaseTodoError = false
+	refSyntax = false
+	resetNoRefresh = false
+	resolveConflict = false
+	rmHints = false
+	sequencerInUse = false
 	skippedCherryPicks = false
+	sparseIndexExpanded = false
+	statusAheadBehind = false
+	statusHints = false
+	statusUoption = false
+	submoduleAlternateErrorStrategyDie = false
+	submoduleMergeConflict = false
+	submodulesNotUpdated = false
+	suggestDetachingHead = false
+	updateSparsePath = false
+	waitingForEditor = false
+	worktreeAddOrphan = false
 
 [branch]
 	sort = -committerdate
@@ -19,9 +53,6 @@
 
 [diff]
 	colorMoved = true
-
-[help]
-	autocorrect = prompt
 
 [tag]
 	sort = -version:refname
@@ -81,19 +112,18 @@
 	auto = true
 	strategy = incremental
 
+[format]
+	pretty = "format:%C(yellow)%h%C(reset)%C(auto)%d%C(reset) - %C(white)%s%C(reset) %C(blue)(%ar)%C(reset) %C(dim white)- %an%C(reset)"
+
 [alias]
 	co = "checkout"
 	sm = "submodule"
 	sw = "switch"
 	wt = "worktree"
 	st = "status"
-	l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-	; ignore = "!f() { curl -sL https://www.toptal.com/developers/gitignore/api/$@ ;} f"
-	ignore = "!gi() { local IFS=','; curl -sL https://www.toptal.com/developers/gitignore/api/\"$*\"; }; gi"
-	graph = "log --graph --all --format=format:'%C(blue)%h%C(reset) - %C(green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)'"
+	graph = "log --graph --all"
 	clone-bare = "!f(){ git clone $1 $2 && cd $(ls -dt */ | head -1) && git checkout $(git commit-tree $(git hash-object -t tree /dev/null) < /dev/null) && echo '*' > .gitignore; }; f"
-	; TODO: Check recent versus sorting branch
-	recent = "!git for-each-ref --sort=-committerdate refs/heads --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:magenta)%(authorname)%(color:reset)'|column -ts'|'"
+	ignore = "!gi() { local IFS=','; curl -sL https://www.toptal.com/developers/gitignore/api/\"$*\"; }; gi"
 
 [url "https://github.com/"]
 	insteadOf = "gh:"
@@ -103,4 +133,3 @@
 
 [url "https://github.com/mvanderloo/"]
 	insteadOf = "my:"
-
