--- a/packages/tmux/dot-config/tmux/tmux.conf
+++ b/packages/tmux/dot-config/tmux/tmux.conf
@@ -3,13 +3,12 @@
 set-option -g default-terminal "$TERM"
 # suggested by README in https://github.com/folke/lsp-colors.nvim
 set-option -as terminal-overrides ',*:Smulx=\E[4::%p1%dm' # undercurl support
-# set-option -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set-option -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 # set-option -a default-terminal "tmux-256color"
 # set-option -ag terminal-overrides ",xterm-256color:RGB"
 # set-option -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 # set-option -as terminal-overrides ',*:Setulc=\E[58::2::::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
-# use system shell
 set-option -g default-shell $SHELL
 
 # set prefix to Ctrl-space
@@ -18,7 +17,7 @@ unbind-key C-b
 bind-key C-Space send-prefix
 
 # Reload config
-bind-key r source-file "$HOME/.config/tmux/tmux.conf"
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "config reloaded."
 
 # remove delay after pressing ESC
 # any sequences that start with ESC won't work
@@ -33,7 +32,7 @@ set-option -g detach-on-destroy off
 set-option -g display-time 750
 
 # history size
-set-option -g history-limit 10000
+set-option -g history-limit 100000
 
 # focus events
 set-option -g focus-events on
@@ -43,34 +42,39 @@ set-option -g mouse on
 ########################################################
 
 ###################### STATUS BAR ######################
-# powerline symbols
-# TRIANGLE_LEFT="#(printf '\ue0b0')"
-# TRIANGLE_RIGHT="#(printf '\ue0b2')"
-# TRIANGLE_LEFT_THIN="#(printf '\ue0b1')"
-# TRIANGLE_RIGHT_THIN="#(printf '\ue0b3')"
-CIRCLE_LEFT="#(printf '\ue0b6')"
-CIRCLE_RIGHT="#(printf '\ue0b4')"
-HALF_BOX_RIGHT="#(printf '\u258C')"
-HALF_BOX_LEFT="#(printf '\u2590')"
-
 set-option -g status-interval 1
 
 set-option -g status-position top
-set-option -g status-justify "absolute-centre"
+set-option -g status-justify "left"
+
+set-option -g status-left-length 100
+set-option -g status-right-length 100
 
 # set-option -g status-style "bg=terminal"
-set-option -g status-style "bg=black"
-# set-option -g status-left "#[fg=terminal bold] #S  #{?#{==:#{session_path},#{HOME}},~,#{s|#{HOME}|~|:session_path}}"
-set-option -g status-left "#[fg=terminal bold] #S "
-set-option -g status-left-length 100
-set-option -g status-right " #[fg=terminal bold]#{?#{==:#{session_path},#{HOME}},~,#{s|#{HOME}|~|:pane_current_path}} "
-set-option -g status-left-length 100
+set-option -g status-style "bold fg=terminal bg=terminal"
 
-set-option -g window-status-format " #[fg=terminal bold] #I:#W "
-set-option -g window-status-current-format "\
-#[fg=brightred bg=black]${CIRCLE_LEFT}\
-#[fg=black bold bg=brightred]#I:#W\
-#[fg=brightred bg=black]${CIRCLE_RIGHT}"
+set-option -g window-status-format " #[default]#I:#W "
+# LEFT="#(printf '\u2588')"
+# RIGHT="#(printf '\u2588')"
+# set-option -g window-status-current-format "#[reverse bg=terminal]${LEFT}#[default bg=terminal]#I:#W#[reverse bg=terminal]${RIGHT}"
+set-option -g window-status-current-format "#[fg=black bg=brightgreen] #I:#W "
+
+set-option -g status-left " "
+set-option -g status-right " #[fg=black bg=brightgreen] #{s|#{HOME}|~|:session_path} #[default] "
+
+# # set-option -g status-style "bg=terminal"
+# set-option -g status-style "bg=black"
+# # set-option -g status-left "#[fg=terminal bold] #S  #{?#{==:#{session_path},#{HOME}},~,#{s|#{HOME}|~|:session_path}}"
+# set-option -g status-left "#[fg=terminal bold] #S "
+# set-option -g status-left-length 100
+# set-option -g status-right " #[fg=terminal bold]#{?#{==:#{session_path},#{HOME}},~,#{s|#{HOME}|~|:pane_current_path}} "
+# set-option -g status-left-length 100
+#
+# set-option -g window-status-format " #[fg=terminal bold] #I:#W "
+# set-option -g window-status-current-format "\
+# #[fg=brightred bg=black]${CIRCLE_LEFT}\
+# #[fg=black bold bg=brightred]#I:#W\
+# #[fg=brightred bg=black]${CIRCLE_RIGHT}"
 
 ########################################################
 
@@ -127,10 +131,10 @@ bind-key -n C-l if -F '#{pane_at_right}' '' 'select-pane -R'
 
 # <prefix>-hjkl: Default pane switching
 # useful if C-hjkl is being consumed by something else
-bind-key h if -F '#{pane_at_left}'   '' 'select-pane -L'
+bind-key h if -F '#{pane_at_left}' '' 'select-pane -L'
 bind-key j if -F '#{pane_at_bottom}' '' 'select-pane -D'
-bind-key k if -F '#{pane_at_top}'    '' 'select-pane -U'
-bind-key l if -F '#{pane_at_right}'  '' 'select-pane -R'
+bind-key k if -F '#{pane_at_top}' '' 'select-pane -U'
+bind-key l if -F '#{pane_at_right}' '' 'select-pane -R'
 
 # Pane swapping
 # bind-key H swap-pane -L # not supported...
