--- a/packages/git/dot-config/git/config
+++ b/packages/git/dot-config/git/config
@@ -114,6 +114,9 @@
 
 [format]
 	pretty = "format:%C(yellow)%h%C(reset)%C(auto)%d%C(reset) - %C(white)%s%C(reset) %C(blue)(%ar)%C(reset) %C(dim white)- %an%C(reset)"
+	; pretty = "format:%C(yellow)%h%C(reset) - %C(white)%s%C(reset) %C(blue)(%ar)%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)"
+	; pretty = "format:%C(blue)%h%C(reset) - %C(green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)"
+	; pretty = "format:%C(red)%h%Creset - %s %C(green)(%cr)%C(reset)%d%n"
 
 [alias]
 	co = "checkout"
@@ -122,8 +125,9 @@
 	wt = "worktree"
 	st = "status"
 	graph = "log --graph --all"
-	clone-bare = "!f(){ git clone $1 $2 && cd $(ls -dt */ | head -1) && git checkout $(git commit-tree $(git hash-object -t tree /dev/null) < /dev/null) && echo '*' > .gitignore; }; f"
-	ignore = "!gi() { local IFS=','; curl -sL https://www.toptal.com/developers/gitignore/api/\"$*\"; }; gi"
+	clone-bare = "!f() { git clone $1 $2 && cd $(ls -dt */ | head -1) && git checkout $(git commit-tree $(git hash-object -t tree /dev/null) </dev/null) && echo '*' >.gitignore; } f"
+	ignore = "!f() { local IFS=',' curl -sL https://www.toptal.com/developers/gitignore/api/\"$*\" } f"
+	stashgrep = "!f() { for i in $(git stash list --format='%gd'); do git stash show -p $i | grep -H --label=\"$i\" \"$@\"; done; } f"
 
 [url "https://github.com/"]
 	insteadOf = "gh:"
