remove .matplotlib directory in $HOME

--- a/packages/python/dot-local/env/python.conf
+++ b/packages/python/dot-local/env/python.conf
@@ -1,3 +1,5 @@
 PYTHONSTARTUP="$HOME/.config/python/startup.py"
 # only works for python 3.13
 PYTHON_HISTORY="$HOME/.local/share/python/history"
+
+MPLCONFIGDIR="$HOME/.config/matplotlib"
