--- a/packages/tmux/dot-config/tmux/tmux.conf
+++ b/packages/tmux/dot-config/tmux/tmux.conf
@@ -17,7 +17,7 @@ unbind-key C-b
 bind-key C-Space send-prefix
 
 # Reload config
-bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "config reloaded."
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message 'config reloaded.'
 
 # remove delay after pressing ESC
 # any sequences that start with ESC won't work
@@ -45,75 +45,37 @@ set-option -g mouse on
 set-option -g status-interval 1
 
 set-option -g status-position top
-set-option -g status-justify "left"
+set-option -g status-justify 'left'
 
 set-option -g status-left-length 100
 set-option -g status-right-length 100
 
-# set-option -g status-style "bg=terminal"
-set-option -g status-style "bold fg=terminal bg=terminal"
+# set-option -g status-style 'bg=terminal'
+set-option -g status-style 'bold fg=terminal bg=terminal'
 
-set-option -g window-status-format " #[default]#I:#W "
-# LEFT="#(printf '\u2588')"
-# RIGHT="#(printf '\u2588')"
-# set-option -g window-status-current-format "#[reverse bg=terminal]${LEFT}#[default bg=terminal]#I:#W#[reverse bg=terminal]${RIGHT}"
-set-option -g window-status-current-format "#[fg=black bg=brightgreen] #I:#W "
+set-option -g window-status-format ' #[default]#I:#W '
+# LEFT='#(printf '\u2588')'
+# RIGHT='#(printf '\u2588')'
+# set-option -g window-status-current-format '#[reverse bg=terminal]${LEFT}#[default bg=terminal]#I:#W#[reverse bg=terminal]${RIGHT}'
+set-option -g window-status-current-format '#[fg=black bg=blue] #I:#W '
 
-set-option -g status-left " "
-set-option -g status-right " #[fg=black bg=brightgreen] #{s|#{HOME}|~|:session_path} #[default] "
+set-option -g status-left ''
+set-option -g status-right ' #[fg=black bg=blue] #{s|#{HOME}|~|:session_path} #[default]'
 
-# # set-option -g status-style "bg=terminal"
-# set-option -g status-style "bg=black"
-# # set-option -g status-left "#[fg=terminal bold] #S  #{?#{==:#{session_path},#{HOME}},~,#{s|#{HOME}|~|:session_path}}"
-# set-option -g status-left "#[fg=terminal bold] #S "
+# # set-option -g status-style 'bg=terminal'
+# set-option -g status-style 'bg=black'
+# # set-option -g status-left '#[fg=terminal bold] #S  #{?#{==:#{session_path},#{HOME}},~,#{s|#{HOME}|~|:session_path}}'
+# set-option -g status-left '#[fg=terminal bold] #S '
 # set-option -g status-left-length 100
-# set-option -g status-right " #[fg=terminal bold]#{?#{==:#{session_path},#{HOME}},~,#{s|#{HOME}|~|:pane_current_path}} "
+# set-option -g status-right ' #[fg=terminal bold]#{?#{==:#{session_path},#{HOME}},~,#{s|#{HOME}|~|:pane_current_path}} '
 # set-option -g status-left-length 100
 #
-# set-option -g window-status-format " #[fg=terminal bold] #I:#W "
-# set-option -g window-status-current-format "\
+# set-option -g window-status-format ' #[fg=terminal bold] #I:#W '
+# set-option -g window-status-current-format '\
 # #[fg=brightred bg=black]${CIRCLE_LEFT}\
 # #[fg=black bold bg=brightred]#I:#W\
-# #[fg=brightred bg=black]${CIRCLE_RIGHT}"
+# #[fg=brightred bg=black]${CIRCLE_RIGHT}'
 
-########################################################
-
-####################### SESSIONS #######################
-# sesh is a tmux session manager
-# s is a script that i wrap around my most common usage of sesh
-bind-key -N "session manager" s run-shell 's'
-bind-key -N "last-session" L run-shell "sesh last"
-bind-key -N "switch to root session" S run-shell 'sesh connect --root "$(pwd)"'
-########################################################
-
-####################### PLUGINS ########################
-# source plugins before setting bindings so they aren't overwritten
-set-option -g @plugin 'tmux-plugins/tpm'
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '$HOME/.local/share/tmux/plugins'
-
-# persist tmux sessions after tmux restart or even computer restart
-# set-option -g @plugin 'tmux-plugins/tmux-resurrect'
-# set-option -g @resurrect-capture-pane-contents 'on'
-
-# automatically saves sessions for tmux-resurrect to restore
-# set-option -g @plugin 'tmux-plugins/tmux-continuum'
-# set-option -g @continuum-restore 'on'
-
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-vim_pattern='(\S+/)?g?\.?(view|l?n?vim?x?|fzf)(diff)?(-wrapped)?'
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +${vim_pattern}$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
-# bind-key -n 'C-;' if-shell "$is_vim" 'send-keys C-;' 'select-pane -l'
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-;' select-pane -l
 ########################################################
 
 ######################## PANES #########################
@@ -124,10 +86,10 @@ set-option -g base-index 1
 bind-key m resize-pane -Z
 
 # switch pane without prefix (without wrapping)
-bind-key -n C-h if -F '#{pane_at_left}' '' 'select-pane -L'
-bind-key -n C-j if -F '#{pane_at_bottom}' '' 'select-pane -D'
-bind-key -n C-k if -F '#{pane_at_top}' '' 'select-pane -U'
-bind-key -n C-l if -F '#{pane_at_right}' '' 'select-pane -R'
+# bind-key -n C-h if -F '#{pane_at_left}' '' 'select-pane -L'
+# bind-key -n C-j if -F '#{pane_at_bottom}' '' 'select-pane -D'
+# bind-key -n C-k if -F '#{pane_at_top}' '' 'select-pane -U'
+# bind-key -n C-l if -F '#{pane_at_right}' '' 'select-pane -R'
 
 # <prefix>-hjkl: Default pane switching
 # useful if C-hjkl is being consumed by something else
@@ -138,8 +100,8 @@ bind-key l if -F '#{pane_at_right}' '' 'select-pane -R'
 
 # Pane swapping
 # bind-key H swap-pane -L # not supported...
-bind-key P swap-pane -D
-bind-key N swap-pane -U
+# bind-key P swap-pane -D
+# bind-key N swap-pane -U
 # bind-key L swap-pane -R # not supported...
 
 # delete
@@ -147,13 +109,19 @@ bind-key N swap-pane -U
 bind-key BSpace kill-pane
 unbind-key x
 
-# visual indicator for active/inactive pane
+# window styling
+set-window-option -g window-active-style fg=terminal,bg=terminal
+set-window-option -g window-style fg=terminal,bg=terminal
+set-option -g pane-border-style fg=terminal,bg=terminal
+set-option -g pane-active-border-style fg=blue,bg=terminal
+
+# or add visual indicator for active/inactive pane
+
 # set-window-option -g window-active-style fg=terminal,bg=terminal
 # set-window-option -g window-style fg=terminal,bg=color8
-
-# active pane
 # set-option -g pane-border-style fg=terminal,bg=color8
 # set-option -g pane-active-border-style fg=terminal,bg=color8
+
 ########################################################
 
 ######################## WINDOWS #######################
@@ -171,7 +139,21 @@ bind-key n next-window
 bind-key N swap-window -t +1 \; select-window -t +1
 bind-key p previous-window
 bind-key P swap-window -t -1 \; select-window -t -1
-bind-key a last-window
+bind-key , previous-window
+bind-key . next-window
+
+bind-key N command-prompt -I '#W' 'rename-window '%%''
+
+# move current pane
+bind-key C break-pane       # to new window
+bind-key < join-pane -t :-1 # to previous window
+bind-key > join-pane -t :+1 # to next window
+
+# move to last window
+bind-key L last-window
+
+# move to last session
+bind-key S switch-client -l
 
 # split spanning current pane
 bind-key - split-window -v
@@ -180,17 +162,32 @@ bind-key \\ split-window -h
 # split spanning whole window
 bind-key _ split-window -fv
 bind-key | split-window -fh
+
+# move pane to window
+# bind-key m switch-client -T move-pane
+bind-key -T move-pane 1 join-pane -t :1
+bind-key -T move-pane 2 join-pane -t :2
+bind-key -T move-pane 3 join-pane -t :3
+bind-key -T move-pane 4 join-pane -t :4
+bind-key -T move-pane 5 join-pane -t :5
+bind-key -T move-pane 6 join-pane -t :6
+bind-key -T move-pane 7 join-pane -t :7
+bind-key -T move-pane 8 join-pane -t :8
+bind-key -T move-pane 9 join-pane -t :9
 ########################################################
 
 ###################### Copy Mode #######################
 # vi style keybindings
 set-window-option -g mode-keys vi
 
-bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi V send -X select-line
-bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle \; send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-selection
-bind-key -T copy-mode-vi Escape send-keys -X cancel
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X select-line
+bind-key -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle \; send -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi Y send-keys -X append-selection-and-cancel
+bind-key -T copy-mode-vi 'C-[' send-keys -X cancel
+bind-key -T copy-mode-vi 'Escape' send-keys -X cancel
+
 # scroll one line at a time
 bind-key -T copy-mode-vi WheelUpPane send-keys -N 1 -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -N 1 -X scroll-down
@@ -199,5 +196,16 @@ bind-key -T copy-mode-vi WheelDownPane send-keys -N 1 -X scroll-down
 unbind-key -T copy-mode-vi MouseDragEnd1Pane
 ########################################################
 
-# Initialize TMUX plugin manager (must be last)
-run "$HOME/.local/share/tmux/plugins/tpm/tpm"
+####################### Sessions #######################
+# sesh is a tmux session manager
+# s is a script that i wrap around my most common usage of sesh
+bind-key -N 'session manager' s run-shell 's'
+bind-key -N 'last-session' L run-shell 'sesh last'
+bind-key -N 'switch to root session' S run-shell 'sesh connect --root "$(pwd)"'
+########################################################
+
+################### Floating Windows ###################
+bind-key -N 'Git GUI' g display-popup -E -h '100%' -w '100%' 'lazygit'
+bind-key -N 'Top' b display-popup -E -h '90%' -w '90%' 'btop'
+bind-key -N 'File Explorer' e display-popup -E -h '90%' -w '90%' 'yazi' # TODO: debug error message
+########################################################
