fix lazygit path

--- a/packages/tmux/dot-config/tmux/tmux.conf
+++ b/packages/tmux/dot-config/tmux/tmux.conf
@@ -203,3 +203,9 @@ bind-key -N 'session manager' s run-shell 's'
 bind-key -N 'last-session' L run-shell 'sesh last'
 bind-key -N 'switch to root session' S run-shell 'sesh connect --root "$(pwd)"'
 ########################################################
+
+################### Floating Windows ###################
+bind-key -N 'Git GUI' g display-popup -d '#{pane_current_path}' -E -h '100%' -w '100%' 'lazygit'
+bind-key -N 'Top' t display-popup -E -h '90%' -w '90%' 'btop'
+bind-key -N 'File Explorer' e display-popup -E -h '90%' -w '90%' 'yazi' # TODO: debug error message
+########################################################
