--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "packages/neovim/dot-config/nvim"]
 	path = packages/neovim/dot-config/nvim
-	url = https://github.com/mvanderloo/neovim
+	url = https://github.com/mvanderloo/neovim-config
